<resources>

    <string name="app_name">天翼启航</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">天翼启航</string>
    <string name="txt_instructor">    天翼辅导员</string>
    <string name="hint_txt_reg_num">输入辅导员识别手机号码</string>
    <string name="btn_identification_txt">识别</string>
    <string name="btn_next_txt">下一步</string>
    <string name="txt_dial_bord">拨号盘</string>
    <string name="txt_dial_bord_description">您可以使用拨号盘、通讯录或通话记录等不同方式来拨打电话。在拨号盘中直接输入号码，点击【拨出】或【IP】进行相应的拨出操作。</string>
    <string name="txt_sms">编辑短信</string>
    <string name="txt_sms_description">在信息主界面中点击【写信息】，进入信息编辑界面，本话机的信息实现短彩合一，在编辑界面你可以输入文字，点击【发送】以短信方式发送，点击【附件】添加图片，音频，视频等文件，点击【发送】以彩信方式发送。</string>
    <string name="txt_internet">互联网</string>
    <string name="txt_internet_description">使用本话机浏览器，您可以高速快捷的连接到网络。在导航页您可以方便的打开主页，并可查看常用网址。</string>
    <string name="txt_camera">拍照</string>
    <string name="txt_camera_description">把照相机的镜头对准拍摄对象，点击界面中的【拍照】按钮即可完成拍照，点击【浏览】按钮可以看到拍摄的照片，用户可以在“媒体库”中对照片进行删除、分享、设置等操作。</string>
    <string name="txt_media">播放列表</string>
    <string name="txt_media_description">点击“播放列表”进入播放列表界面，点击菜单按钮您可以根据需要进行新建、重命名和删除列表等操作。</string>
    <string name="txt_album">媒体库</string>
    <string name="txt_album_description">媒体库包括：音乐、视频、录音、图库和更新。点击进入图库，您可以进行管理和浏览图片的操作</string>
    <string name="txt_menu_close">结束评分</string>
    <string name="txt_menu_exit">结束</string>
    <string name="txt_menu_about">关于我们</string>
    <string name="txt_welcome_evaluate">请对讲解员评分</string>
    <string name="txt_thanks_evaluate">谢谢评分！</string>
    <string name="btn_exit_txt">退出</string>
    <string name="btn_back_to_main_txt">返回主菜单</string>
    <string name="btn_download_txt">下载</string>
    <string name="btn_start_download_txt">开始下载</string>
    <string name="txt_connect_network">请连接网络</string>
    <string name="str_format_master_info" formatted="false">天翼辅导员：%s 工号 %s 为您服务</string>
    <string name="txt_toast_get_message_failed">获取信息出错</string>
    <string name="str_format_master_name">您好：%s</string>
    <string name="str_format_input_phone">请输入电话号码</string>
    <string name="msg_get_app_list_failed">获取应用列表失败</string>
    <string name="msg_download_complete">下载完成</string>
    <string name="msg_download_failed">下载失败</string>
    <string name="btn_install_txt">安装</string>
    <string name="btn_run_txt">运行</string>
    <string name="msg_submit_error">提交出错</string>
    <string name="btn_back_txt">返回</string>
    <string name="download_title">掌上营业厅</string>
    <string name="msg_toast_submit">提交中</string>
    <string name="msg_toast_contact_server">正在读取服务器信息</string>
    <string name="msg_toast_not_enough_info">未获得基本信息，不能评分，请退出程序并联网后重试</string>
    <string name="btn_evaluate_txt">提交</string>

</resources>