<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:background="@drawable/titlebar_bg"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/authentication_txt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/green_bg"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_avatar_height"
            android:layout_margin="@dimen/avatar_margin"
            android:src="@drawable/body_icon" />

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:gravity="center"
            android:text="zhudian"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/welcome_txt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bg_no_mask"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dip"
            android:layout_margin="10dip"
            android:background="@drawable/mask"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linear_input_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:paddingTop="5dip"
                    android:text="@string/txt_instructor"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/edit_user_phone"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_txt_reg_num"
                        android:singleLine="true" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn"
                        android:onClick="onBtnAuthClick"
                        android:text="@string/btn_identification_txt"
                        android:textColor="@android:color/white"
                        android:textSize="15dip" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txt_master"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="天翼辅导员:秀秀为您服务"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn"
                    android:onClick="onBtnNextClick"
                    android:text="@string/btn_next_txt"
                    android:textColor="@android:color/white"
                    android:textSize="15dip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>