<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:background="@drawable/titlebar_bg"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/authentication_txt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/green_bg"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_avatar_height"
            android:layout_margin="50dip"
            android:src="@drawable/heart" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/thanks_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bg_no_mask"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:layout_margin="10dip"
            android:background="@drawable/mask"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dip"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="8dip"
                android:text="@string/txt_welcome_evaluate"
                android:textSize="15dip" />

            <RatingBar
                android:id="@+id/ratingbar"
                style="@style/roomRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dip"
                android:numStars="4"
                android:rating="3" />

            <LinearLayout
                android:id="@+id/linear_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone" >

                <Button
                    android:layout_width="72dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/btn"
                    android:text="@string/btn_exit_txt"
                    android:textSize="15dip" />

                <Button
                    android:layout_width="120dip"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn"
                    android:text="@string/btn_back_to_main_txt"
                    android:textSize="15dip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>